# tp1-sistemas-distribuidos-2c

./: .gitignore  README.md  docker-compose-full-dataset.yaml  docker-compose-health.yaml  docker-compose.yaml  go.mod  go.sum
client/: main.go
client/src/: batch_file.go  batch_lines.go  blocking_queue.go  client.go  data_message_sender.go  file_lines_reader.go  receiver.go  runnable.go  sender.go  thread.go
cmd/: Dockerfile  lungua.go  main.go
cmd/boundary/: boundary.go
cmd/client/: client.go  config.json  main.go
cmd/coordinator/: main.go
cmd/filter/: main.go
cmd/health_client/: main.go
cmd/healthcheck/: main.go
cmd/joiner/: main.go
cmd/joinercoordinator/: main.go
cmd/os_counter/: main.go
cmd/percentile/: main.go
cmd/projection/: main.go
cmd/review_counter/: main.go
cmd/server/: main.go
cmd/top10_games/: main.go
cmd/top5_reviews/: main.go
cmd/top_games/: main.go
cmd/top_reviews/: main.go
common/communication/: protocol.go
common/network/: socket.go
common/utils/: batch_lines.go  runnable.go
docs/: Robustness.drawio  RobustnessBigScale.drawio  RobustnessTop10.drawio  RobustnessTop5.drawio  Sequence.drawio  client.mermaid  dag.md  dag.mermaid  deployment.drawio  deployment_games.drawio  deployment_reviews.drawio  robustness.drawio
examples/: main.go
internal/boundary/: boundry.go  config.go  results.go  state.go
output/: client_full.txt  results_full.txt
scripts/: kill_container.py  kill_containers.py  query_solver.sh  split.go  test.sh
scripts/query_solver/: pyproject.toml  results.py
server/: main.go
(+117 files in other folders)
