[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Daniel Lovera <daanilo2497@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
langid = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
